language/move-lang/tests/move_check/typing/module_call_wrong_single_argument.exp
error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_single_argument.move:24:9
   │
17 │     public fun foo(s: S) {
   │                       - Expected: '0x2::M::S'
   ·
24 │         foo(0);
   │         ^^^^^^
   │         │   │
   │         │   Given: integer
   │         Invalid call of '0x2::M::foo'. Invalid argument for parameter 's'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_single_argument.move:25:9
   │
20 │     public fun bar(x: u64) {
   │                       --- Expected: 'u64'
   ·
25 │         bar(S{});
   │         ^^^^^^^^
   │         │   │
   │         │   Given: '0x2::M::S'
   │         Invalid call of '0x2::M::bar'. Invalid argument for parameter 'x'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_single_argument.move:26:9
   │
20 │     public fun bar(x: u64) {
   │                       --- Expected: 'u64'
   ·
26 │         bar(@0x0);
   │         ^^^^^^^^^
   │         │   │
   │         │   Given: 'address'
   │         Invalid call of '0x2::M::bar'. Invalid argument for parameter 'x'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_single_argument.move:30:9
   │
 6 │     public fun foo(s: S) {
   │                       - Expected: '0x2::X::S'
   ·
30 │         X::foo(S{});
   │         ^^^^^^^^^^^
   │         │      │
   │         │      Given: '0x2::M::S'
   │         Invalid call of '0x2::X::foo'. Invalid argument for parameter 's'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_single_argument.move:31:9
   │
 6 │     public fun foo(s: S) {
   │                       - Expected: '0x2::X::S'
   ·
31 │         X::foo(0);
   │         ^^^^^^^^^
   │         │      │
   │         │      Given: integer
   │         Invalid call of '0x2::X::foo'. Invalid argument for parameter 's'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_single_argument.move:32:9
   │
 9 │     public fun bar(x: u64) {
   │                       --- Expected: 'u64'
   ·
32 │         X::bar(S{});
   │         ^^^^^^^^^^^
   │         │      │
   │         │      Given: '0x2::M::S'
   │         Invalid call of '0x2::X::bar'. Invalid argument for parameter 'x'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_single_argument.move:33:9
   │
 9 │     public fun bar(x: u64) {
   │                       --- Expected: 'u64'
   ·
33 │         X::bar(false);
   │         ^^^^^^^^^^^^^
   │         │      │
   │         │      Given: 'bool'
   │         Invalid call of '0x2::X::bar'. Invalid argument for parameter 'x'

